[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pythontool"
dynamic = ["version"]
description = "Python code execution with subprocess isolation"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [{ name = "Peng Ding", email = "oaklight.peng@gmail.com" }]
dependencies = []

[project.optional-dependencies]
dev = ["ruff==0.15.20"]
test = ["pytest>=7.0.0"]

[project.urls]
Repository = "https://github.com/Oaklight/pythontool"
Issues = "https://github.com/Oaklight/pythontool/issues"

[tool.setuptools]
py-modules = ["pythontool"]

[tool.setuptools.dynamic]
version = { attr = "pythontool.__version__" }

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
target-version = "py310"
line-length = 99

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM"]
